chore: add intro

--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -2,4 +2,66 @@ import { Meta } from "@storybook/addon-docs";
 
 <Meta title="Introduction" />
 
-# Introduction to Product Preview Card
+# Product Preview Card
+
+<!---Esses são exemplos. Veja https://shields.io para outras pessoas ou para personalizar este conjunto de escudos. Você pode querer incluir dependências, status do projeto e informações de licença aqui--->
+
+![GitHub repo size](https://img.shields.io/github/languages/code-size/BAXHEN-CORPORATION/product-preview-001?style=for-the-badge)
+![GitHub language count](https://img.shields.io/github/languages/count/BAXHEN-CORPORATION/product-preview-001?style=for-the-badge)
+![GitHub forks](https://img.shields.io/github/forks/BAXHEN-CORPORATION/product-preview-001?style=for-the-badge)
+![Bitbucket open issues](https://img.shields.io/bitbucket/issues/BAXHEN-CORPORATION/product-preview-001?style=for-the-badge)
+![Bitbucket open pull requests](https://img.shields.io/bitbucket/pr-raw/BAXHEN-CORPORATION/product-preview-001?style=for-the-badge)
+
+> [Product Preview Card](https://classy-narwhal-e82e98.netlify.app/)
+
+## 💻 Prerequisites
+
+Before starting, make sure you've met the following requirements:
+
+- You have installed the latest version of `NodeJs/NPM`
+- You have a `Windows/Linux/Mac` machine.
+
+## 🚀 Clone the template
+
+To clone the template, follow these steps:
+
+```
+git clone https://github.com/BAXHEN-CORPORATION/product-preview-001 product-preview
+.git
+
+cd ./product-preview
+
+npm install / yarn
+
+npm run start / yarn start
+
+```
+
+## 📃 Run the docs
+
+Generate the docs and open it
+
+```
+
+npm run docs / yarn docs
+
+npm run open-docs / yarn open-docs
+
+```
+
+## 🤝 Contributors
+
+We thank the following people who contributed to this project:
+
+<table>
+  <tr>
+    <td align="center">
+      <a href="https://www.linkedin.com/in/baxhen/" target="__blank">
+        {/* <img src="https://avatars.githubusercontent.com/u/41558102?v=4" width="100px;" alt="Photo by Leonardo Rebouças on GitHub"/><br> */}
+        <sub>
+          <b>Leonardo Rebouças</b>
+        </sub>
+      </a>
+    </td>
+  </tr>
+</table>
